2 August 2005 Sylvain Pion
- Lazy_exact_nt : fix the identical() optimization.
- Lazy_exact_nt : add mixed operators between Lazy_exact_nt<ET1> and
  Lazy_exact_nt<ET2>
- Binary_operator_result<T1, T2> : new tool to get the type of mixed
  operators.
- Binary_operator_result.h : move to Number_types.

1 August 2005 Sylvain Pion
- Fix for last change.

1 August 2005 Sylvain Pion
- Replace uses of convert_to() by NT_converter.
- Add NT_converter<Lazy_exact_nt<ET>, ET> specialization.
- Change Exact_type_selecter for Lazy_exact_nt<ET> to ET
  (instead of Lazy_exact_nt<ET>).

30 July 2005 Sylvain Pion
- Add Uncertain<T>.
- Use it in comparison operators and sign() and compare() of Interval_nt.
- Use it instead of Certified::operators in Lazy_exact_nt.
- Filtered_predicate : use is_indeterminate() on AP's result_type to replace
  some exceptions by normal control flow.

28 July 2005 Andreas Fabri
- Added a functor to Lazy.h that writes the computed result in an OutputIterator 
  of Object

28 July 2005 Sylvain Pion
- Interval_nt : Increment number_of_failures for the CGAL::Certified operators.

28 July 2005 Andreas Fabri
- Added a functor to Lazy.h that has Object as return value as they are needed
  by Kernel::Intersect_2


26 July 2005 Sylvain Pion
- Filtered_kernel : No need to explicitely mention To_interval as argument
  to Cartesian_converter anymore, the default argument handles it.

16 June 2005 Menelaos Karavelas
- Regular triangulation: added arithmetic filtering support for the
  nearest_power_vertex predicate

26 May 2005 Sylvain Pion
- Lazy_exact_nt : add depth() member function to compute the depth of the DAG.

11 May 2005 Sylvain Pion
- Add using Base::operator(); in static filters.

1 May 2005 Sylvain Pion
- Lazy_exact_nt : optimize operator<(), operator==() and compare() in case
  of identical variables.

26 March 2005 Sylvain Pion
- Lazy_exact_nt<ET> : allow ET == int and ET == double.
- Lazy_exact_nt<ET> : add % and gcd (kills filtering, though).